@@ -40,6 +40,10 @@ def update_station_info_table(station_id):
         )
     ]
     for key, value in station_info.items():
+        if key.startswith("_"):
+            continue
+        if isinstance(value, dict):
+            value = ", ".join([str(k) for k in value.keys()])
         table_rows.append(html.Div([
             html.Div(key, className='custom-table-title'),
             html.Div(value, className='custom-table-cell')
